--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-manage.py
-media/
+#manage.py
+#media/
 #homeassistant_renamer/
 renamer/migrations/
 renamer/config.py
@@ -71,7 +71,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+#db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
