--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [{
         "src": "homeassistant_renamer/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
+        "config": { "maxLambdaSize": "15mb" }
     }],
     "routes": [
         {
