--- a/vercel.json
+++ b/vercel.json
@@ -11,3 +11,10 @@
         }
     ]
 }
+{
+    "functions": {
+        "app/api/**/*": {
+            "maxDuration": 60 // All functions can run for a maximum of 60 seconds
+        }
+    }
+}
