--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
 {
     "functions": {
         "app/api/**/*": {
-            "maxDuration": 60 // All functions can run for a maximum of 60 seconds
+            "maxDuration": 60
         }
     }
 }
