--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
         "homeassistant_renamer/wsgi.py": {
-            "runtime": "@vercel/python@3.12",
+            "runtime": "python",
             "maxDuration": 60,
             "memory": 1024,
             "includeFiles": "homeassistant_renamer/**/*",
